<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.shuffleboardscorekeeper.MainActivity"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="25sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/holo_red_light"
                android:text="@string/red"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"/>


            <TextView
                android:id = "@+id/home_total_score"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:text="0"
                android:textSize="40sp"
                android:gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp" />

        </LinearLayout>

        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/holo_blue_light"
                android:text="@string/blue"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"/>


            <TextView
                android:id = "@+id/guest_total_score"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:text="0"
                android:textSize="40sp"
                android:gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp" />

        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/first_score_act"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="20sp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"/>
        <fragment
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:id="@+id/takedown_fragment"
            android:name="com.example.android.shuffleboardscorekeeper.ButtonViewLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout = "@layout/activity_button_view_layout"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/second_score_act"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="20sp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"/>

        <fragment
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:id="@+id/escape_fragment"
            android:name="com.example.android.shuffleboardscorekeeper.ButtonViewLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout = "@layout/activity_button_view_layout"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/third_score_act"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="20sp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"/>

        <fragment
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:id="@+id/reversal_fragment"
            android:name="com.example.android.shuffleboardscorekeeper.ButtonViewLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout = "@layout/activity_button_view_layout"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/fourth_score_act"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="20sp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"/>

        <fragment
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:id="@+id/nearfall_fragment"
            android:name="com.example.android.shuffleboardscorekeeper.ButtonViewLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout = "@layout/activity_button_view_layout"/>


    </LinearLayout>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_bg_transparent"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="R1"
                android:gravity="center"
                android:background="@drawable/textview_bg_transparent"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="R2"
                android:gravity="center"
                android:background="@drawable/textview_bg_transparent"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="R3"
                android:gravity="center"
                android:background="@drawable/textview_bg_transparent"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/red"
                android:textColor="@android:color/holo_red_light"
                android:gravity="center"
                android:background="@drawable/textview_bg_transparent"/>

            <TextView
                android:id="@+id/home_score_R1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/textview_bg_transparent"/>

            <TextView
                android:id="@+id/home_score_R2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/textview_bg_transparent"/>

            <TextView
                android:id="@+id/home_score_R3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/textview_bg_transparent"/>
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/blue"
                android:textColor="@android:color/holo_blue_light"
                android:gravity="center"
                android:background="@drawable/textview_bg_transparent"/>

            <TextView
                android:id="@+id/guest_score_R1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/textview_bg_transparent"/>

            <TextView
                android:id="@+id/guest_score_R2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/textview_bg_transparent"/>

            <TextView
                android:id="@+id/guest_score_R3"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/textview_bg_transparent"/>
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/reset_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="120dp"
        android:layout_marginTop="10dp"
        android:text = "@string/reset" />

</LinearLayout>
